# DuiMini

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  DuiMini.sln  LICENSE  README.md  TODO list.md  appveyor.yml  ubuntu_dependencies.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Demo/: CMakeLists.txt  Demo.cpp  Demo.rc  Demo.vcxproj  Demo.vcxproj.filters  MainDlg.cpp  MainDlg.h  Resource.h  stdafx.h
Demo/uires/: uires.xml
Demo/uires/skin/default/: resid.xml
Demo/uires/skin/system/: resid.xml
Demo/uires/string/: zh-CN.xml
Demo/uires/xml/: main.xml
DuiMini/: CMakeLists.txt  DuiMini.cpp  DuiMini.h  DuiMini.rc  DuiMini.vcxproj  DuiMini.vcxproj.filters  StdAfx.cpp  StdAfx.h  UIDefine.h  resource.h
DuiMini/Control/: UIButton.cpp  UIButton.h  UIControl.cpp  UIControl.h  UIDialog.cpp  UIDialog.h  UIImage.cpp  UIImage.h  UIText.cpp  UIText.h
DuiMini/Control/Atom/: UIImage.cpp  UIImage.h  UIText.cpp  UIText.h
DuiMini/Control/Basic/: UIButton.h
DuiMini/Control/Layout/: UIContainer.cpp  UIContainer.h  UIDialog.cpp
DuiMini/Core/: UIConfig.cpp  UIConfig.h  UIDefine.h  UIDialog.cpp  UIDialog.h  UIDlgBuilder.cpp  UIDlgBuilder.h  UIInterface.h  UIMarkup.cpp  UIMarkup.h  UIResource.cpp  UIResource.h  UISystem.cpp  UISystem.h  UIWindow.cpp  UIWindow.h
DuiMini/Core/Render/: UIRender.cpp  UIRender.h  UIRenderGDIP.cpp  UIRenderGDIP.h
DuiMini/Core/Resource/: UIResFile.cpp  UIResFile.h  UIResRC.cpp  UIResRC.h  UIResZip.cpp  UIResZip.h  UIResource.cpp  UIResource.h
DuiMini/Utils/: UIException.cpp  UIException.h  UIRecLog.cpp  UIRecLog.h  UIUnzip.cpp  UIUnzip.h  UIUtils.cpp  UIUtils.h  UIXmlLoader.cpp  UIXmlLoader.h
DuiMini/include/: DuiMini.h  UIBuildConfig.h  UIBuildConfig.h.in  UIDefine.h
DuiMini/include/Core/: UIConfig.h  UIInterface.h  UISystem.h
DuiMini/include/Core/Resource/: UIResFile.h  UIResLoader.hpp  UIResRaw.h  UIResZip.h  UIResource.h
DuiMini/include/Utils/: UIEvent.hpp  UIException.h  UIUnzip.h  UIUtils.h  UIXmlParse.hpp
DuiMini/src/Core/: UIConfig.cpp  UISystem.cpp
DuiMini/src/Core/Resource/: UIResFile.cpp  UIResRaw.cpp  UIResZip.cpp  UIResource.cpp
DuiMini/src/Utils/: UIException.cpp  UIUnzip.cpp  UIUtils.cpp
DuiMini/thirdpart/pugixml/: pugiconfig.hpp
DuiMini/thirdpart/zlib/: unzip.c  zconf.h  zlib.h  zlib_x64.lib  zlib_x86.lib
Tests/: CMakeLists.txt  test_main.cpp
Tests/Core/: test_resource.cpp
Tests/TestRes/: testxml.xml
Tests/Tools/: HostFile.cpp
Tests/Utils/: test_utils.cpp
Tools/: CMakeLists.txt
Tools/ResPacker/: CMakeLists.txt  ResPacker.cpp
Wiki/: config.json
docs/: Duimini-Wiki(newest).url  Duimini-Wiki.url  index.html
docs/amWiki/css/: amWiki.css
thirdpart/: CMakeLists.txt
thirdpart/cxxopts/: cxxopts.hpp
thirdpart/miniz/: CMakeLists.txt
thirdpart/pugixml/: CMakeLists.txt
